test/analyzer/input_programs/valid_programs/program01.tea
# primitive types
1
2.3
true
false
none

# reference types
"abc"
[1,2,3]
[true, 'abc', [none]]
[]
{a: "b", c: ""}
{}
|1, 15|
||
<6, 9, 14>
<>