test/analyzer/input_programs/invalid_programs/program15.tea
# ordered iterable types
orderedIt1 := "abc"
orderedIt2 := [1, 2, [3, 4, 5]]
orderedIt3 := |'x', 'y', 'z'|
orderedIt4 := <7, 8, 9>

# not an ordered iterable type
nonOrderedIt1 := {a: 1}

# all fine and dandy
orderedIt1[3]
orderedIt2[2]
orderedIt3[1]
orderedIt4[0]
# literals are fine and dandy too
"abc"[0]
[1,2,3,4][0]
|'a'|[0]
< 5, 6, 7>[0]

# invalid
nonOrderedIt1[0]
